--- a/frontend-10ea-project/c1-pt4-next-map/package.json
+++ b/frontend-10ea-project/c1-pt4-next-map/package.json
@@ -12,9 +12,12 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.11.0",
+    "@auth/prisma-adapter": "^1.6.0",
+    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@prisma/client": "^5.12.1",
     "axios": "^1.6.8",
     "next": "14.1.0",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
