--- a/frontend-10ea-project/c1-pt4-next-map/package.json
+++ b/frontend-10ea-project/c1-pt4-next-map/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
-    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
     "axios": "^1.6.8",
     "next": "14.1.0",
@@ -31,7 +31,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.38",
-    "prisma": "^5.11.0",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
