--- a/frontend-10ea-project/c1-pt4-next-map/package.json
+++ b/frontend-10ea-project/c1-pt4-next-map/package.json
@@ -20,6 +20,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
     "recoil": "^0.7.7"
