--- a/frontend-10ea-project/c1-pt4-next-map/package.json
+++ b/frontend-10ea-project/c1-pt4-next-map/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
+    "react-toastify": "^10.0.5",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
