--- a/frontend-10ea-project/c1-pt4-next-map/package.json
+++ b/frontend-10ea-project/c1-pt4-next-map/package.json
@@ -13,12 +13,14 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
+    "@heroicons/react": "^2.1.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
     "axios": "^1.6.8",
     "next": "14.1.0",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
